1) started changelog. status: luna beats vice 10-0 and is probably ranked ~2250 elo.
2) changed transposition table replacement scheme to aging mechanism
3) implemented SEE function (still has some bugs). not yet used.
4) now, upon receiving stop_search signal, we return a static evaluation rather than 0
5) added 'go perft' command to UCI
6) ----- starting MAJOR bug-fix hunt to fix as many bugs as possible -----
   (this is what happens when one blindly implements features without testing them carefully. lesson learned!)
7) changed entire negamax() function architecture. still working on fixing bug relating to extensions
8) fixed lots of bugs!! still working on fixing PV collection bug
9) fixed PV collection bug, code is working just as well as before.
   working on better mate detection
10) finally fixed timeout bug by implementing new time management scheme! HUGE difference in performance
   (9.5 / 10 vs old version!!)
11) implemented SEE and currently using that instead of MVV/LVA for move ordering.
    also using late-move pruning. search speed seems to have significantly improved.