@@ -639,7 +639,7 @@ U64 ISOLATED_MASKS[64];
 U64 WHITE_PASSED_PAWN_MASKS[64];
 U64 BLACK_PASSED_PAWN_MASKS[64];
 
-const int PASSED_PAWN_BONUS[9] = {0, 10, 30, 50, 75, 100, 150, 200};
+const int PASSED_PAWN_BONUS[9] = {0, 0, 10, 30, 50, 75, 100, 150, 200};
 
 const int SEE_PIECE_VALUES[13] = {100, 300, 300, 500, 900, 0,
                                   100, 300, 300, 500, 900, 0, 0};
